[gd_scene load_steps=21 format=3 uid="uid://crc8cnukweya5"]

[ext_resource type="Theme" uid="uid://8vbrmwwup85v" path="res://ui/nes_theme.tres" id="1_4o62l"]
[ext_resource type="Script" path="res://ui/MenuStart.gd" id="1_p8o61"]
[ext_resource type="Shader" path="res://ui/shaders/bg_scroll.gdshader" id="2_ol466"]
[ext_resource type="Texture2D" uid="uid://dnlec0e3y23l2" path="res://ui/images/background.png" id="3_34611"]
[ext_resource type="PackedScene" uid="uid://dryhynf7pgsh" path="res://ui/components/selector/UISelectMenu.tscn" id="3_eo7u8"]
[ext_resource type="Resource" uid="uid://xl4kbvwtqosa" path="res://ui/components/selector/avatars/select_blondin_avatar.tres" id="4_22chx"]
[ext_resource type="Resource" uid="uid://drglm5vn2wrmp" path="res://ui/components/selector/avatars/select_cat_avatar.tres" id="5_rlhdo"]
[ext_resource type="Resource" uid="uid://b5f8irer884kn" path="res://ui/components/selector/avatars/select_clown_avatar.tres" id="6_uvw5a"]
[ext_resource type="Resource" uid="uid://b3frsjuarsynw" path="res://ui/components/selector/avatars/select_mago_avatar.tres" id="7_7nmyi"]
[ext_resource type="Resource" uid="uid://clsi80fxufql2" path="res://ui/components/selector/avatars/select_rabbit_avatar.tres" id="8_ux6ta"]
[ext_resource type="Resource" uid="uid://bifx1qj47rkjj" path="res://ui/components/selector/avatars/select_red_panda_avatar.tres" id="9_o4no5"]
[ext_resource type="Script" path="res://ui/components/start_game_player/UIStartGamePlayers.gd" id="12_3bpyg"]
[ext_resource type="Resource" uid="uid://c8n1gexd32m7u" path="res://ui/components/selector/tables/select_base_table.tres" id="12_mpuas"]
[ext_resource type="Resource" uid="uid://d4lbdxisqtc37" path="res://ui/components/selector/levels/select_office_level.tres" id="13_sjids"]
[ext_resource type="Texture2D" uid="uid://cpgrbmbod08c0" path="res://ui/components/selector/levels/preview_office.png" id="16_gu6h4"]
[ext_resource type="Texture2D" uid="uid://birom0fqu6tl2" path="res://ui/components/selector/tables/preview_base_table.png" id="17_dycf3"]
[ext_resource type="Resource" uid="uid://dn6ap5wilup3p" path="res://ui/components/selector/capsules/select_colored.tres" id="17_tiuqp"]
[ext_resource type="Resource" uid="uid://c1yvqdymql01y" path="res://ui/components/selector/capsules/select_lau.tres" id="18_b6d5b"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ta6n4"]
shader = ExtResource("2_ol466")
shader_parameter/speed = 0.15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_20wt6"]
bg_color = Color(0, 0.266035, 0.248847, 1)

[node name="MenuStart" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 3
mouse_filter = 1
theme = ExtResource("1_4o62l")
script = ExtResource("1_p8o61")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.40495, 0.445642, 0.547716, 1)

[node name="Pattern" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_ta6n4")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_34611")
expand_mode = 1
stretch_mode = 1

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -263.0
offset_top = -356.0
offset_right = 175.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_20wt6")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="button_add_player" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "+ Ajouter joueur"

[node name="ui_players" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("12_3bpyg")

[node name="label_nbcapsules" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Nombre de capsules :"

[node name="nb_cap_box" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="slider_nbcapsules" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/nb_cap_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 10.0
value = 5.0
rounded = true
tick_count = 10
ticks_on_borders = true

[node name="label_nbcapsules_txt" type="Label" parent="Panel/MarginContainer/VBoxContainer/nb_cap_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0
"

[node name="label_score" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Score à atteindre :"

[node name="score_box" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="slider_score" type="HSlider" parent="Panel/MarginContainer/VBoxContainer/score_box"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 20.0
value = 10.0
tick_count = 20
ticks_on_borders = true

[node name="label_score_txt" type="Label" parent="Panel/MarginContainer/VBoxContainer/score_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
text = "0
"

[node name="labels_level_table_box" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer/labels_level_table_box"]
layout_mode = 2
size_flags_horizontal = 6
text = "Level"

[node name="Label2" type="Label" parent="Panel/MarginContainer/VBoxContainer/labels_level_table_box"]
layout_mode = 2
size_flags_horizontal = 6
text = "Table"

[node name="btns_level_table_box" type="HBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2

[node name="selected_level" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/btns_level_table_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("16_gu6h4")
ignore_texture_size = true
stretch_mode = 0

[node name="selected_table" type="TextureButton" parent="Panel/MarginContainer/VBoxContainer/btns_level_table_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 6
texture_normal = ExtResource("17_dycf3")
ignore_texture_size = true
stretch_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="button_start" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme = ExtResource("1_4o62l")
text = "Démarrer
"

[node name="button_quit" type="Button" parent="Panel/MarginContainer/VBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = "Quitter"

[node name="UIAvatarSelectMenu" parent="." instance=ExtResource("3_eo7u8")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_bottom = 6.10352e-05
elements = Array[Resource]([ExtResource("4_22chx"), ExtResource("5_rlhdo"), ExtResource("6_uvw5a"), ExtResource("7_7nmyi"), ExtResource("8_ux6ta"), ExtResource("9_o4no5")])

[node name="UILevelSelectMenu" parent="." instance=ExtResource("3_eo7u8")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_bottom = 6.10352e-05
elements = Array[Resource]([ExtResource("13_sjids")])

[node name="UITableSelectMenu" parent="." instance=ExtResource("3_eo7u8")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_bottom = 6.10352e-05
elements = Array[Resource]([ExtResource("12_mpuas")])

[node name="UICapsuleSelectMenu" parent="." instance=ExtResource("3_eo7u8")]
visible = false
layout_mode = 2
anchors_preset = 0
offset_bottom = 6.10352e-05
elements = Array[Resource]([ExtResource("17_tiuqp"), ExtResource("18_b6d5b")])

[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/button_add_player" to="." method="_on_button_add_player_pressed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/nb_cap_box/slider_nbcapsules" to="." method="_on_slider_nbcapsules_value_changed"]
[connection signal="value_changed" from="Panel/MarginContainer/VBoxContainer/score_box/slider_score" to="." method="_on_slider_score_value_changed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/btns_level_table_box/selected_level" to="." method="_on_selected_level_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/btns_level_table_box/selected_table" to="." method="_on_selected_table_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/button_start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="Panel/MarginContainer/VBoxContainer/VBoxContainer/button_quit" to="." method="_on_button_quit_pressed"]
